forgot to import orbitron font inside css

--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 /* MERCURY */
 body {
     min-height: 100vh;
@@ -23,7 +24,6 @@ div {
     margin-top:50px;
 }
 #explain_box {
-    font-family:'Orbitron', sans-serif;
     position:absolute;
     top:5%;
     left:50%;
