--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.html
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.html
@@ -21,7 +21,7 @@
 <body>
 
 <div id="explain_box">
-  <h1>Hello everyone!</h1>
+  <h1 style>Hello everyone!</h1>
 </div>
 
 <div id="solar_system" class="planets-container">
