--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -792,3 +792,35 @@ div {
     left:50%;
     transform:translate(-50%, -50%);
 }
+/* Style for the container that holds the trail particles */
+.trail-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    pointer-events: none; /* Allows mouse events to pass through */
+}
+
+/* Style for each individual trail particle */
+.trail-particle {
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background-color: white;
+    border-radius: 50%;
+    animation: fade-out 2s linear forwards; /* Fades out over 2 seconds */
+    transform-origin: center;
+}
+
+/* Keyframes for the fading animation */
+@keyframes fade-out {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(0.1);
+    }
+}
