--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -22,6 +22,9 @@ div {
 #solar_system {
     position:absolute;
     margin-top:50px;
+    position: relative; /* Set position to relative */
+    width: 100%;
+    height: 100vh;
 }
 #explain_box {
     position:absolute;
@@ -793,12 +796,12 @@ div {
     transform:translate(-50%, -50%);
 }
 /* Style for the container that holds the trail particles */
-.trail-container {
+#trail-container {
     position: absolute;
-    width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
     pointer-events: none; /* Allows mouse events to pass through */
 }
 
