--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.html
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.html
@@ -166,7 +166,7 @@
     const trailContainer = document.getElementById('trail-container'); // Get the new container
 
     // Interval (in milliseconds) for creating a new trail particle
-    const trailInterval = 50; 
+    const trailInterval = 10; // CHANGE THIS TO MAKE THE POINTS CLOSER
     let lastPosition = { x: 0, y: 0 };
     
     // Function to create a new trail particle
