--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -22,7 +22,7 @@ div {
 #solar_system {
     position:absolute;
     margin-top:50px;
-    position: relative; /* Set position to relative */
+    position: relative; 
     width: 100%;
     height: 100vh;
 }
@@ -789,41 +789,15 @@ div {
 .ASTEROID {
     animation: rotate-image 90s linear infinite;
 }
-#earth_simp{
+#earth_trail{
     position:absolute;
-    top:50;
+    top:50%;
     left:50%;
     transform:translate(-50%, -50%);
-}
-/* Style for the container that holds the trail particles */
-#trail-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none; /* Allows mouse events to pass through */
-}
-
-/* Style for each individual trail particle */
-.trail-particle {
-    position: absolute;
-    width: 2px;
-    height: 2px;
-    background-color: white;
-    border-radius: 50%;
-    animation: fade-out 2s linear forwards; /* Fades out over 2 seconds */
-    transform-origin: center;
-}
-
-/* Keyframes for the fading animation */
-@keyframes fade-out {
-    0% {
-        opacity: 1;
-        transform: scale(1);
-    }
-    100% {
-        opacity: 0;
-        transform: scale(0.1);
-    }
+    height:400px;
+    width:400px;
+    border-color: white transparent transparent transparent;
+    border-radius:50%;
+    border-width: 0.1em 0.1em 0 0;
+    border-style: solid;
 }
