--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.html
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.html
@@ -66,7 +66,7 @@
   </div>
 
   <!-- EARTH -->
-   <div id="earth_trail">
+   <div class="earth_trail" id="earth_trail">
         <div id="EARTH" class="EARTH">
         <div style="--t: {{ t2_plus_1 }}" class="earth-globe">
             <div style="--c: {{ t }}" class="line radius h earth-h"></div>
