NEVER SAY NEVER

--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -796,11 +796,11 @@ div {
     transform:translate(-50%, -50%);
     height:380px;
     width:380px;
-    border-color: white transparent transparent transparent;
+    border-color: transparent white transparent transparent;
     border-radius:50%;
     border-width: 0.1em 0.1em 0 0;
     border-style: solid;
 }
 .earth_trail{
-    animation: rotate-image 12s linear infinite;
+    animation: rotate-image 6s linear infinite;
 }
