--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.html
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.html
@@ -66,32 +66,32 @@
   </div>
 
   <!-- EARTH -->
-   <div class="earth_trail" id="earth_trail">
-        <div id="EARTH" class="EARTH">
-        <div style="--t: {{ t2_plus_1 }}" class="earth-globe">
-            <div style="--c: {{ t }}" class="line radius h earth-h"></div>
-            {% for line in positive_lines %}
-            <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h earth-h"></div>
-            {% endfor %}
-            {% for line in negative_lines %}
-            <div style="--dp: {{ line.dp }}; --s:1; --c: {{ line.c }}" class="line h earth-h"></div>
-            {% endfor %}
-        </div>
+    <div id="EARTH" class="EARTH">
+    <div style="--t: {{ t2_plus_1 }}" class="earth-globe">
+        <div style="--c: {{ t }}" class="line radius h earth-h"></div>
+        {% for line in positive_lines %}
+        <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h earth-h"></div>
+        {% endfor %}
+        {% for line in negative_lines %}
+        <div style="--dp: {{ line.dp }}; --s:1; --c: {{ line.c }}" class="line h earth-h"></div>
+        {% endfor %}
+    </div>
 
-        <!-- MOON -->
-        <div class="MOON">
-        <div style="--t: {{ t2_plus_1 }}" class="moon-globe">
-            <div style="--c: {{ t }}" class="line radius h moon-h"></div>
-            {% for line in positive_lines %}
-            <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h moonearth-h"></div>
-            {% endfor %}
-            {% for line in negative_lines %}
-            <div style="--dp: {{ line.dp }}; --s:1; --c: {{ line.c }}" class="line h moon-h"></div>
-            {% endfor %}
-        </div>
-        </div>
+    <!-- MOON -->
+    <div class="MOON">
+      <div style="--t: {{ t2_plus_1 }}" class="moon-globe">
+        <div style="--c: {{ t }}" class="line radius h moon-h"></div>
+        {% for line in positive_lines %}
+        <div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h moonearth-h"></div>
+        {% endfor %}
+        {% for line in negative_lines %}
+        <div style="--dp: {{ line.dp }}; --s:1; --c: {{ line.c }}" class="line h moon-h"></div>
+        {% endfor %}
+      </div>
     </div>
   </div>
+
+  <div id="earth_trail" class="earth_trail"></div>
 
   <!-- MARS -->
   <div class="MARS">
