--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -796,7 +796,7 @@ div {
     transform:translate(-50%, -50%);
     height:380px;
     width:380px;
-    border-color: transparent white transparent transparent;
+    border-color: transparent transparent transparent white;
     border-radius:50%;
     border-width: 0.1em 0.1em 0 0;
     border-style: solid;
