--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -797,9 +797,9 @@ div {
     transform:translate(-50%, -50%) rotate(30deg); 
     height:380px;
     width:380px;
-    border-color: transparent transparent white transparent;
+    border-color: white transparent transparent transparent;
     border-radius:50%;
-    border-width: 0 0.1em 0.1em 0;
+    border-width: 0.1em 0.1em 0 0;
     border-style: solid;
 }
 .earth_trail{
