--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -789,19 +789,16 @@ div {
 .ASTEROID {
     animation: rotate-image 90s linear infinite;
 }
-#earth_trail{
+#earth_trail {
+    animation: rotate-image 12s linear infinite;
     position:absolute;
     top:50%;
     left:50%;
-    /* Combine both transformations into a single line */
-    transform:translate(-50%, -50%); 
+    transform:translate(-50%, -50%) rotate(0deg);
     height:380px;
     width:380px;
-    border-color: white transparent transparent transparent;
+    border-color: transparent white transparent transparent;
     border-radius:50%;
-    border-width: 0.1em 0.1em 0 0;
+    border-width: 0 0.1em 0.1em 0;
     border-style: solid;
-}
-.earth_trail{
-    animation: rotate-image 12s linear infinite;
 }
