--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -794,11 +794,11 @@ div {
     position:absolute;
     top:50%;
     left:50%;
-    transform:translate(-50%, -50%) rotate(-120deg);
+    transform:translate(-50%, -50%);
     height:380px;
     width:380px;
-    border-color: transparent white transparent transparent;
+    border-color: transparent transparent white transparent;
     border-radius:50%;
-    border-width: 0 0.1em 0.1em 0;
+    border-width: 0 0 0.1em 0.1em;
     border-style: solid;
 }
