--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -786,11 +786,19 @@ div {
         transform: translate(-50%, -50%) rotate(360deg);
     }
 }
+@keyframes rotate-trail {
+    from {
+        transform: translate(-50%, -50%) rotate(30px);
+    }
+    to {
+        transform: translate(-50%, -50%) rotate(390deg);
+    }
+}
 .ASTEROID {
     animation: rotate-image 90s linear infinite;
 }
 #earth_trail {
-    animation: rotate-image 12s linear infinite;
+    animation: rotate-trail 12s linear infinite;
     position:absolute;
     top:50%;
     left:50%;
