--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -788,7 +788,7 @@ div {
 }
 @keyframes rotate-trail {
     from {
-        transform: translate(-50%, -50%) rotate(30px);
+        transform: translate(-50%, -50%) rotate(30deg);
     }
     to {
         transform: translate(-50%, -50%) rotate(390deg);
