--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.html
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.html
@@ -159,7 +159,15 @@
     </div>
   </div>
 
-    <div id="earth_trail" class="earth_trail"></div>
+    <div id="mercury_trail"></div>
+    <div id="venus_trail"></div>
+    <div id="earth_trail"></div>
+    <div id="mars_trail"></div>
+    <div id="jupiter_trail"></div>
+    <div id="saturne_trail"></div>
+    <div id="uranus_trail"></div>
+    <div id="neptune_trail"></div>
+    <div id="moon_trail"></div>
 
 </div>
 </body>
