--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -898,9 +898,9 @@ div {
     transform:translate(-50%, -50%);
     height:380px;
     width:380px;
-    border-color: white transparent transparent transparent;
+    border-color: transparent white transparent transparent;
     border-radius:50%;
-    border-width: 0.1em 0.1em 0 0; /* Note: The original had different border widths */
+    border-width: 0 0.1em 0.1em 0; /* Note: The original had different border widths */
     border-style: solid;
 }
 /* MARS TRAIL */
