Added a bit more text

--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.html
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.html
@@ -22,6 +22,7 @@
 
 <div id="explain_box">
   <h1 style>Hello everyone!</h1>
+  <h2>Hover over the celestial object you want to observer, and then fill out the parameters.</h2>
 </div>
 
 <div id="solar_system" class="planets-container">
