--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -23,11 +23,11 @@ div {
     margin-top:350px;
     position: relative; 
     width: 100%;
-    height: 100vh;
+    height: auto;
 }
 #explain_box {
     position:absolute;
-    top:1%;
+    top:1.5%;
     left:50%;
     transform:translate(-50%, -50%);
 }
