--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -23,7 +23,7 @@ div {
     margin-top:350px;
     position: relative; 
     width: 100%;
-    height: auto;
+    height: 500px;
 }
 #explain_box {
     position:absolute;
