--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -21,7 +21,7 @@ div {
 }
 #solar_system {
     margin-top:350px;
-    position: relative; 
+    position: absolute;
     width: 100%;
     height: 500px;
 }
