--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -20,10 +20,12 @@ div {
     box-sizing: border-box;
 }
 #solar_system {
-    margin-top:350px;
-    position: absolute;
-    width: 100%;
-    height: 500px;
+    position:absolute;
+    top:5%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    height:auto;
+    width:100%;
 }
 #explain_box {
     position:absolute;
