--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -21,10 +21,10 @@ div {
 }
 #solar_system {
     position:absolute;
-    top:5%;
+    top:10%;
     left:50%;
     transform:translate(-50%, -50%);
-    height:auto;
+    height:200px;
     width:100%;
 }
 #explain_box {
