--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -13,7 +13,7 @@ body {
     color:white;
     position:relative;
     overflow-y: scroll;
-    height:5000px;
+    height:auto;
 }
 div {
     transform-style: preserve-3d;
@@ -24,7 +24,7 @@ div {
     top:10%;
     left:50%;
     transform:translate(-50%, -50%);
-    height:200px;
+    height:50%;
     width:100%;
 }
 #explain_box {
