i don't even know what I'm doing tbh

--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -13,7 +13,7 @@ body {
     color:white;
     position:relative;
     overflow-y: scroll;
-    height:auto;
+    height:5000px;
 }
 div {
     transform-style: preserve-3d;
