--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -32,6 +32,7 @@ div {
     top:2%;
     left:50%;
     transform:translate(-50%, -50%);
+    text-align:center;
 }
 /* ORBITING CONTAINER - This element handles the revolution around a central point */
 .MERCURY {
